components/ingress-nginx-controller-rules/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fia-api-service
            port:
              number: 80
#      - path: /fia
#        pathType: Prefix
#        backend:
#          service:
#            name: frontend-service
#            port:
#              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scigateway-service
            port:
              number: 80
